# ProjectsSFML

./: CMakeLists.txt  Card.cpp  Card.h  CardHand.cpp  CardHand.h  CardHandScore.cpp  CardHandScore.h  Deck.cpp  Deck.h  DrawCardHand.cpp  DrawCardHand.h  DrawPokerHand.cpp  DrawPokerHand.h  DrawScoreName.cpp  DrawScoreName.h  DrawScoreRate.cpp  DrawScoreRate.h  DrawingAllScores.cpp  DrawingAllScores.h  DrawingCard.cpp  DrawingCard.h  PokerScore.cpp  PokerScore.h  PokerTextScore.cpp  PokerTextScore.h  PokerTextScore1.cpp  PokerTextScore1.h  Position.cpp  Position.h  Scores.h  main.cpp  rankEnum.h  suitEnum.h
